# l10nregistry-rs

./: Cargo.toml  README.md
benches/: iter.rs  localization.rs  preferences.rs  registry.rs  solver.rs  source.rs  sync.rs
data/browser/en-US/: brand.ftl
data/toolkit/en-US/: menu.ftl
examples/: async.rs  preferences.rs  sync.rs
src/: environment.rs  errors.rs  fluent.rs  gecko.rs  lib.rs  registry.rs  source.rs  testing.rs  tokio.rs  uri.rs
src/bundles/: asynchronous.rs  mod.rs  synchronous.rs
src/futures/: mod.rs
src/iter/: asynchronous.rs  synchronous.rs
src/registry/: asynchronous.rs  mod.rs  synchronous.rs
src/solver/: README.md  mod.rs  parallel.rs  serial.rs  solution.rs
src/solver/testing/: mod.rs  scenarios.rs
src/source/: fetcher.rs  mod.rs
tests/: localization.rs  registry.rs  scenarios.rs  solver.rs  source.rs
tests/resources/browser/en-US/: errors.ftl
tests/resources/browser/en-US/browser/: brand.ftl  main.ftl
tests/resources/browser/pl/: errors.ftl
tests/resources/browser/pl/browser/: brand.ftl  main.ftl
tests/resources/toolkit/en-US/: errors.ftl
tests/resources/toolkit/en-US/toolkit/: menu.ftl
tests/resources/toolkit/pl/: errors.ftl
tests/resources/toolkit/pl/toolkit/: menu.ftl
