[package]
name = "l10nregistry"
version = "0.1.1"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
async-trait = "0.1"
chunky-vec = "0.1"
fluent-bundle = { git = "https://github.com/projectfluent/fluent-rs", tag = "fluent-fallback@0.1.0" }
fluent-fallback = { git = "https://github.com/projectfluent/fluent-rs", tag = "fluent-fallback@0.1.0" }
fluent-testing = { git = "https://github.com/projectfluent/fluent-rs", tag = "fluent-fallback@0.1.0", optional = true, features = ["sync", "async"] }
futures = "0.3"
log = "0.4"
pin-project-lite = "0.2"
unic-langid = "0.9"
tokio = { version = "1.0", optional = true, features = ["rt-multi-thread", "macros"] }
replace_with = "0.1"

[dev-dependencies]
unic-langid = { version = "0.9", features = ["macros"] }
serial_test = "0.5"
criterion = "0.3"

[features]
default = []
tokio-io = ["tokio"]

[[bench]]
name = "preferences"
harness = false

[[bench]]
name = "localization"
harness = false

[[bench]]
name = "solver"
harness = false

[[test]]
name = "source"
path = "tests/source.rs"
required-features = ["tokio", "fluent-testing"]

[[test]]
name = "registry"
path = "tests/registry.rs"
required-features = ["tokio", "fluent-testing"]

[[test]]
name = "localization"
path = "tests/localization.rs"
required-features = ["tokio", "fluent-testing"]

[[test]]
name = "scenarios"
path = "tests/scenarios.rs"
required-features = ["tokio", "fluent-testing"]
