[package]
name = "l10nregistry"
version = "0.3.0"
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
async-trait = "0.1"
#fluent-bundle = { git = "https://github.com/nordzilla/fluent-rs.git", rev = "94c06c10b511dd968926bb51f72656e7a071fbf1" }
#fluent-fallback = { git = "https://github.com/nordzilla/fluent-rs.git", rev = "94c06c10b511dd968926bb51f72656e7a071fbf1" }
#fluent-testing = { git = "https://github.com/nordzilla/fluent-rs.git", rev = "94c06c10b511dd968926bb51f72656e7a071fbf1", optional = true, features = ["sync", "async"] }
fluent-bundle = { path = "../fluent-rs/fluent-bundle" }
fluent-fallback = { path = "../fluent-rs/fluent-fallback" }
fluent-testing = { path = "../fluent-rs/fluent-testing", optional = true, features = ["sync", "async"] }
futures = "0.3"
pin-project-lite = "0.2"
unic-langid = "0.9"
tokio = { version = "1.0", optional = true, features = ["rt-multi-thread", "macros"] }
replace_with = "0.1"
rustc-hash = "1"

[dev-dependencies]
unic-langid = { version = "0.9", features = ["macros"] }
serial_test = "0.5"
criterion = "0.3"

[features]
default = []
tokio-io = ["tokio"]

[[bench]]
name = "preferences"
harness = false
required-features = ["tokio", "fluent-testing"]

[[bench]]
name = "localization"
harness = false
required-features = ["tokio", "fluent-testing"]

[[bench]]
name = "source"
harness = false
required-features = ["tokio", "fluent-testing"]

[[bench]]
name = "solver"
harness = false
required-features = ["tokio", "fluent-testing"]

[[bench]]
name = "registry"
harness = false
required-features = ["tokio", "fluent-testing"]

[[test]]
name = "source"
path = "tests/source.rs"
required-features = ["tokio", "fluent-testing"]

[[test]]
name = "registry"
path = "tests/registry.rs"
required-features = ["tokio", "fluent-testing"]

[[test]]
name = "localization"
path = "tests/localization.rs"
required-features = ["tokio", "fluent-testing"]

[[test]]
name = "scenarios_sync"
path = "tests/scenarios_sync.rs"
required-features = ["fluent-testing"]

[[test]]
name = "scenarios_async"
path = "tests/scenarios_async.rs"
required-features = ["tokio", "fluent-testing"]
